--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,8 @@
 {
-	"presets": ["react", "es2015", "stage-0"]
+	"presets": ["es2015", "react"],
+  "env": {
+    "production": {
+      "presets": ["react-optimize"]
+    }
+  }
 }
