--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "react-gh-like-diff",
   "version": "0.0.1",
   "description": "Generate Github like diff result.",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "scripts": {
+    "build": "cross-env BABEL_ENV=production babel src --out-dir lib"
+  },
   "author": "Peng-Jie <bivinity.pengzjie@gmail.com>",
   "license": "MIT",
   "dependencies": {
@@ -12,11 +15,20 @@
     "recompose": "^0.24.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-core": "^6.25.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-optimize": "^1.0.1",
+    "cross-env": "^5.0.5",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   },
   "peerDependencies": {
     "react": "^0.14.7 || ^15.0.0",
     "react-dom": "^0.14.7 || ^15.0.0"
-  }
+  },
+  "files": [
+    "lib"
+  ]
 }
