--- a/package.json
+++ b/package.json
@@ -5,9 +5,14 @@
   "main": "lib/react-gh-like-diff.cjs.js",
   "module": "es/react-gh-like-diff.esm.js",
   "jsnext:main": "es/react-gh-like-diff.esm.js",
+  "umd": "dist/react-gh-like-diff.umd.js",
   "scripts": {
+    "build": "npm-run-all clean rollup minify:*",
     "clean": "rimraf lib es dist",
-    "build": "npm run clean && rollup -c"
+    "rollup": "rollup -c",
+    "minify:cjs": "uglifyjs $npm_package_main -cm -o $npm_package_main",
+    "minify:esm": "babel --env=production --presets=minify $npm_package_module -o $npm_package_module",
+    "minify:umd": "uglifyjs $npm_package_umd -cm -o $npm_package_umd"
   },
   "author": "Peng-Jie <bivinity.pengzjie@gmail.com>",
   "license": "MIT",
@@ -22,8 +27,10 @@
     "babel-core": "^6.25.0",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-minify": "^0.2.0",
     "babel-preset-react": "^6.24.1",
     "cross-env": "^5.0.5",
+    "npm-run-all": "^4.0.2",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "rimraf": "^2.6.1",
@@ -35,7 +42,8 @@
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^3.0.0",
     "rollup-plugin-replace": "^1.1.1",
-    "rollup-plugin-uglify": "^2.0.1"
+    "rollup-plugin-uglify": "^2.0.1",
+    "uglify-js": "^3.0.27"
   },
   "peerDependencies": {
     "react": "^0.14.7 || ^15.0.0",
