--- a/package.json
+++ b/package.json
@@ -2,9 +2,17 @@
   "name": "react-gh-like-diff",
   "version": "0.0.1",
   "description": "Generate Github like diff result.",
-  "main": "lib/index.js",
+  "main": "lib/react-gh-like-diff.cjs.js",
+  "module": "es/react-gh-like-diff.esm.js",
+  "jsnext:main": "es/react-gh-like-diff.esm.js",
+  "umd": "dist/react-gh-like-diff.umd.js",
   "scripts": {
-    "build": "cross-env BABEL_ENV=production babel src --out-dir lib"
+    "build": "npm-run-all clean rollup minify:*",
+    "clean": "rimraf lib es dist",
+    "rollup": "rollup -c",
+    "minify:cjs": "uglifyjs $npm_package_main -cm -o $npm_package_main",
+    "minify:esm": "babel --env=production --presets=minify $npm_package_module -o $npm_package_module",
+    "minify:umd": "uglifyjs $npm_package_umd -cm -o $npm_package_umd"
   },
   "author": "Peng-Jie <bivinity.pengzjie@gmail.com>",
   "license": "MIT",
@@ -17,18 +25,33 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
+    "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-minify": "^0.2.0",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-react-optimize": "^1.0.1",
     "cross-env": "^5.0.5",
+    "npm-run-all": "^4.0.2",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "rimraf": "^2.6.1",
+    "rollup": "^0.47.4",
+    "rollup-plugin-babel": "^3.0.1",
+    "rollup-plugin-commonjs": "^8.1.0",
+    "rollup-plugin-css-only": "^0.2.0",
+    "rollup-plugin-css-porter": "^0.1.2",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-replace": "^1.1.1",
+    "rollup-plugin-uglify": "^2.0.1",
+    "uglify-js": "^3.0.27"
   },
   "peerDependencies": {
     "react": "^0.14.7 || ^15.0.0",
     "react-dom": "^0.14.7 || ^15.0.0"
   },
   "files": [
-    "lib"
+    "lib",
+    "es",
+    "dist"
   ]
 }
