--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-gh-like-diff",
   "version": "0.0.1",
-  "description": "Generate Github like diff result.",
+  "description": "Generate Github like diff result in react.",
   "main": "lib/react-gh-like-diff.cjs.js",
   "module": "es/react-gh-like-diff.esm.js",
   "jsnext:main": "es/react-gh-like-diff.esm.js",
@@ -10,15 +10,15 @@
     "test": "npm run lint && jest",
     "test:watch": "npm test -- --watch",
     "test:cov": "npm run lint && jest --coverage",
-    "build": "npm-run-all clean rollup minify:*",
+    "build": "npm-run-all clean rollup minify:* size:*",
     "clean": "rimraf lib es dist",
     "rollup": "npm run clean && rollup -c",
     "minify:cjs": "uglifyjs $npm_package_main -cm toplevel -o $npm_package_main",
     "minify:esm": "babel --env=production --presets=minify $npm_package_module -o $npm_package_module",
     "minify:umd": "uglifyjs $npm_package_umd -c warnings=false -m toplevel -o $npm_package_umd",
-    "size:cjs": "echo CommonJs Gziped Size: $(gzip-size $npm_package_main) | chalk greenBright bold",
-    "size:umd": "echo UMD Gziped Size: $(gzip-size $npm_package_umd) | chalk greenBright bold",
-    "size:es": "echo ESModule Gziped Size: $(gzip-size $npm_package_module) | chalk greenBright bold",
+    "size:cjs": "echo CommonJs Gziped Size: $(gzip-size $npm_package_main) | chalk yellowBright bold",
+    "size:umd": "echo UMD Gziped Size: $(gzip-size $npm_package_umd) | chalk yellowBright bold",
+    "size:es": "echo ESModule Gziped Size: $(gzip-size $npm_package_module) | chalk yellowBright bold",
     "lint": "eslint src",
     "precommit": "lint-staged",
     "prepublish": "npm run build"
@@ -39,6 +39,22 @@
     ]
   },
   "author": "Peng-Jie <bivinity.pengzjie@gmail.com>",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/neighborhood999/react-gh-like-diff.git"
+  },
+  "keywords": [
+    "compare",
+    "comparison",
+    "diff",
+    "difference",
+    "diff2html",
+    "react",
+    "recompose"
+  ],
+  "bugs": {
+    "url": "https://github.com/neighborhood999/react-gh-like-diff/issues"
+  },
   "license": "MIT",
   "dependencies": {
     "diff2html": "^2.3.0",
