--- a/.travis.yml
+++ b/.travis.yml
@@ -13,4 +13,5 @@ cache:
     - node_modules
 
 script: "npm test"
-after_script: "npm run test:cov"
+after_script:
+  - cat ./coverage/lcov.info | ./node_modules/codecov/bin/codecov
