--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "size:es": "echo ESModule Gziped Size: $(gzip-size $npm_package_module) | chalk yellowBright bold",
     "lint": "eslint src",
     "precommit": "lint-staged",
+    "prepush": "npm run test",
     "prepublish": "npm run build"
   },
   "jest": {
@@ -76,6 +77,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-minify": "^0.2.0",
     "babel-preset-react": "^6.24.1",
+    "bundlesize": "^0.14.2",
     "chalk-cli": "^4.0.0",
     "codecov": "^2.3.0",
     "enzyme": "^2.9.1",
@@ -109,5 +111,9 @@
     "lib",
     "es",
     "dist"
-  ]
+  ],
+  "bundlesize": {
+    "path": "./lib/react-gh-like-diff.cjs.js",
+    "maxSize": "3.5 kB"
+  }
 }
