--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ cache:
   directories:
     - node_modules
 
-script: "npm test"
+script:
+  - "npm test"
+  - "npm size"
+
 after_script:
   - cat ./coverage/lcov.info | ./node_modules/codecov/bin/codecov
