--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
   },
   "jest": {
     "setupFiles": [
-      "<rootDir>/src/__tests__/setup.js"
+      "<rootDir>/src/__tests__/setup.js",
+      "<rootDir>/src/__tests__/shim.js"
     ],
     "collectCoverage": true,
     "coverageDirectory": "./coverage/",
@@ -85,21 +86,21 @@
     "bundlesize": "^0.15.2",
     "chalk-cli": "^4.0.0",
     "codecov": "^3.0.0",
-    "enzyme": "^3.0.0",
-    "enzyme-adapter-react-15": "^1.0.1",
+    "enzyme": "^3.1.0",
+    "enzyme-adapter-react-16": "^1.0.1",
     "eslint": "^4.4.1",
     "eslint-config-prettier": "^2.6.0",
     "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-react": "^7.4.0",
     "gzip-size-cli": "^2.0.0",
     "husky": "^0.14.3",
-    "jest": "^21.0.2",
+    "jest": "^21.2.0",
     "lint-staged": "^4.0.3",
     "npm-run-all": "^4.0.2",
     "prettier": "^1.7.2",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-test-renderer": "^15.6.1",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "react-test-renderer": "^16.0.0",
     "rimraf": "^2.6.1",
     "rollup": "^0.50.0",
     "rollup-plugin-babel": "^3.0.1",
@@ -110,8 +111,8 @@
     "uglify-js": "^3.0.27"
   },
   "peerDependencies": {
-    "react": "^0.14.7 || ^15.0.0",
-    "react-dom": "^0.14.7 || ^15.0.0"
+    "react": "^0.14.7 || ^15.0.0 || ^16.0.0",
+    "react-dom": "^0.14.7 || ^15.0.0 || ^16.0.0"
   },
   "files": [
     "lib",
