--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "babel-eslint": "^8.0.1",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-minify": "^0.2.0",
     "babel-preset-react": "^6.24.1",
@@ -103,7 +104,7 @@
     "rimraf": "^2.6.1",
     "rollup": "^0.51.0",
     "rollup-plugin-babel": "^3.0.1",
-    "rollup-plugin-commonjs": "^8.1.0",
+    "rollup-plugin-commonjs": "^8.2.4",
     "rollup-plugin-css-porter": "^0.1.2",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^3.0.0",
