chore(packages): remove get gzip size

--- a/package.json
+++ b/package.json
@@ -10,15 +10,12 @@
     "test": "npm run lint && jest",
     "test:watch": "npm test -- --watch",
     "test:cov": "npm run lint && jest --coverage",
-    "build": "npm-run-all clean rollup minify:* size:*",
+    "build": "npm-run-all clean rollup minify:*",
     "clean": "rimraf lib es dist",
     "rollup": "npm run clean && rollup -c",
     "minify:cjs": "uglifyjs $npm_package_main -cm toplevel -o $npm_package_main",
     "minify:esm": "babel --env=production --presets=minify $npm_package_module -o $npm_package_module",
     "minify:umd": "uglifyjs $npm_package_umd -c warnings=false -m toplevel -o $npm_package_umd",
-    "size:cjs": "echo CommonJs Gziped Size: $(gzip-size $npm_package_main) | chalk yellowBright bold",
-    "size:umd": "echo UMD Gziped Size: $(gzip-size $npm_package_umd) | chalk yellowBright bold",
-    "size:es": "echo ESModule Gziped Size: $(gzip-size $npm_package_module) | chalk yellowBright bold",
     "size": "bundlesize",
     "lint": "eslint src",
     "precommit": "lint-staged",
@@ -85,7 +82,6 @@
     "babel-jest": "^23.6.0",
     "babel-preset-minify": "^0.4.3",
     "bundlesize": "^0.17.0",
-    "chalk-cli": "^4.0.0",
     "codecov": "^3.0.4",
     "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.1.1",
@@ -93,7 +89,6 @@
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.8.2",
-    "gzip-size-cli": "^3.0.0",
     "husky": "^0.14.3",
     "jest": "^23.6.0",
     "lint-staged": "^7.2.2",
