chore(packages): babel-7 (#79)

--- a/package.json
+++ b/package.json
@@ -10,15 +10,12 @@
     "test": "npm run lint && jest",
     "test:watch": "npm test -- --watch",
     "test:cov": "npm run lint && jest --coverage",
-    "build": "npm-run-all clean rollup minify:* size:*",
+    "build": "npm-run-all clean rollup minify:*",
     "clean": "rimraf lib es dist",
     "rollup": "npm run clean && rollup -c",
     "minify:cjs": "uglifyjs $npm_package_main -cm toplevel -o $npm_package_main",
     "minify:esm": "babel --env=production --presets=minify $npm_package_module -o $npm_package_module",
     "minify:umd": "uglifyjs $npm_package_umd -c warnings=false -m toplevel -o $npm_package_umd",
-    "size:cjs": "echo CommonJs Gziped Size: $(gzip-size $npm_package_main) | chalk yellowBright bold",
-    "size:umd": "echo UMD Gziped Size: $(gzip-size $npm_package_umd) | chalk yellowBright bold",
-    "size:es": "echo ESModule Gziped Size: $(gzip-size $npm_package_module) | chalk yellowBright bold",
     "size": "bundlesize",
     "lint": "eslint src",
     "precommit": "lint-staged",
@@ -74,26 +71,26 @@
     "recompose": "^0.30.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-external-helpers": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^8.2.3",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
+    "babel-jest": "^23.6.0",
     "babel-preset-minify": "^0.4.3",
-    "babel-preset-react": "^6.24.1",
     "bundlesize": "^0.17.0",
-    "chalk-cli": "^4.0.0",
     "codecov": "^3.0.4",
-    "enzyme": "^3.5.0",
+    "enzyme": "^3.6.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
     "eslint-config-prettier": "^2.9.0",
     "eslint-plugin-prettier": "^2.6.0",
     "eslint-plugin-react": "^7.8.2",
-    "gzip-size-cli": "^3.0.0",
     "husky": "^0.14.3",
-    "jest": "^23.5.0",
+    "jest": "^23.6.0",
     "lint-staged": "^7.2.2",
     "npm-run-all": "^4.1.3",
     "prettier": "^1.14.2",
@@ -102,7 +99,7 @@
     "react-test-renderer": "^16.4.0",
     "rimraf": "^2.6.2",
     "rollup": "^0.65.0",
-    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-babel": "^4.0.3",
     "rollup-plugin-commonjs": "^9.1.6",
     "rollup-plugin-css-porter": "^0.1.2",
     "rollup-plugin-node-builtins": "^2.1.2",
@@ -121,7 +118,7 @@
   "bundlesize": [
     {
       "path": "./lib/react-gh-like-diff.cjs.js",
-      "maxSize": "3.5 kB"
+      "maxSize": "3.0 kB"
     }
   ]
 }
