fix: husky hooks

--- a/.huskyrc.json
+++ b/.huskyrc.json
@@ -1,5 +1,7 @@
 {
   "hooks": {
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged",
+    "pre-push": "npm run test",
+    "pre-publish": "npm run build"
   }
 }
