--- a/example/compare-markdown/package.json
+++ b/example/compare-markdown/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
-    "react-gh-like-diff": "1.0.5-beta",
+    "react-gh-like-diff": "1.0.6",
     "react-scripts": "2.1.1",
     "unfetch": "^4.0.1"
   },
