--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-gh-like-diff",
-  "version": "1.0.6-beta.4",
+  "version": "1.0.6",
   "description": "Generate Github like diff result in react.",
   "main": "lib/react-gh-like-diff.cjs.js",
   "module": "es/react-gh-like-diff.esm.js",
