--- a/package.json
+++ b/package.json
@@ -10,11 +10,8 @@
     "test": "npm run lint && jest",
     "test:watch": "npm test -- --watch",
     "test:cov": "npm run lint && jest --coverage",
-    "build": "npm-run-all clean rollup minify:*",
     "clean": "rimraf lib es dist",
-    "rollup": "npm run clean && rollup -c",
-    "minify:cjs": "uglifyjs $npm_package_main -cm toplevel -o $npm_package_main",
-    "minify:esm": "babel --env=production --presets=minify $npm_package_module -o $npm_package_module",
+    "build": "npm run clean && rollup -c",
     "size": "bundlesize",
     "lint": "eslint src"
   },
@@ -99,8 +96,7 @@
     "rollup-plugin-css-porter": "1.0.2",
     "rollup-plugin-node-builtins": "2.1.2",
     "rollup-plugin-node-resolve": "5.2.0",
-    "rollup-plugin-size-snapshot": "0.10.0",
-    "uglify-js": "3.6.0"
+    "rollup-plugin-size-snapshot": "0.10.0"
   },
   "peerDependencies": {
     "react": "^15.0.0 || ^16.0.0",
@@ -114,7 +110,7 @@
   "bundlesize": [
     {
       "path": "./lib/react-gh-like-diff.cjs.js",
-      "maxSize": "3.0 kB"
+      "maxSize": "5.0 kB"
     }
   ]
 }
