--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,11 @@
     "node": true,
     "es6": true
   },
-  "extends": ["prettier", "prettier/react"],
+  "extends": [
+    "prettier",
+    "prettier/react",
+    "plugin:react/recommended"
+  ],
   "plugins": ["prettier"],
   "rules": {
     "prettier/prettier": [
@@ -15,5 +19,11 @@
         "singleQuote": true
       }
     ]
+  },
+  "settings": {
+    "react": {
+      "pragma": "React",
+      "version": "detect"
+    }
   }
 }
