--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "react-gh-like-diff",
   "version": "1.1.3",
   "description": "Generate Github like diff result in react.",
-  "main": "lib/react-gh-like-diff.cjs.js",
-  "module": "es/react-gh-like-diff.esm.js",
-  "jsnext:main": "es/react-gh-like-diff.esm.js",
-  "umd": "dist/react-gh-like-diff.umd.js",
+  "main": "dist/js/react-gh-like-diff.cjs.js",
+  "module": "dist/js/react-gh-like-diff.esm.js",
+  "jsnext:main": "dist/js/react-gh-like-diff.esm.js",
+  "umd": "dist/js/react-gh-like-diff.umd.js",
   "scripts": {
     "test": "npm run lint && jest",
     "test:watch": "npm test -- --watch",
@@ -94,7 +94,7 @@
     "react-test-renderer": "16.13.0",
     "rimraf": "3.0.2",
     "rollup": "2.0.6",
-    "rollup-plugin-css-porter": "1.0.2",
+    "rollup-plugin-css-only": "^2.0.0",
     "rollup-plugin-node-builtins": "2.1.2",
     "rollup-plugin-size-snapshot": "0.11.0"
   },
