--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint src"
   },
   "jest": {
-    "setupFiles": [
+    "setupFilesAfterEnv": [
       "<rootDir>/src/__tests__/setup.js"
     ],
     "collectCoverage": true,
@@ -76,11 +76,11 @@
     "@rollup/plugin-buble": "0.21.1",
     "@rollup/plugin-commonjs": "11.0.2",
     "@rollup/plugin-node-resolve": "7.1.1",
+    "@testing-library/jest-dom": "^5.1.1",
+    "@testing-library/react": "^10.0.1",
     "babel-eslint": "10.1.0",
     "bundlesize": "0.18.0",
     "codecov": "3.6.5",
-    "enzyme": "3.11.0",
-    "enzyme-adapter-react-16": "1.15.2",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.10.0",
     "eslint-plugin-prettier": "3.1.2",
@@ -91,7 +91,6 @@
     "prettier": "1.19.1",
     "react": "16.13.0",
     "react-dom": "16.13.0",
-    "react-test-renderer": "16.13.0",
     "rimraf": "3.0.2",
     "rollup": "2.0.6",
     "rollup-plugin-css-only": "2.0.0",
