--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,17 +10,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
+
       - name: Set up Node.js
-        uses: actions/setup-node@master
+        uses: actions/setup-node@v1
+
       - name: Installing Deps
         run: |
           yarn install
+
       - name: Lint & Tests
         run: |
           yarn run test:cov
+
       - name: Upload Code Coverage
-        uses: codecov/codecov-action@v1.0.3
+        uses: codecov/codecov-action@v1
         with:
           token: ${{secrets.CODECOV_TOKEN}}
           file: ./coverage/lcov.info
