--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test:watch": "npm test -- --watch",
     "test:cov": "npm run lint && jest --coverage",
     "clean": "rimraf lib es dist",
-    "build": "npm run clean && rollup -c",
+    "build:dev": "npm run clean && cross-env NODE_ENV=development rollup -c",
+    "build": "npm run clean && cross-env NODE_ENV=production rollup -c",
     "size": "bundlesize",
     "lint": "eslint src"
   },
@@ -76,11 +77,13 @@
     "@rollup/plugin-buble": "0.21.1",
     "@rollup/plugin-commonjs": "11.0.2",
     "@rollup/plugin-node-resolve": "7.1.1",
+    "@rollup/plugin-replace": "^2.3.2",
     "@testing-library/jest-dom": "5.3.0",
     "@testing-library/react": "10.0.2",
     "babel-eslint": "10.1.0",
     "bundlesize": "0.18.0",
     "codecov": "3.6.5",
+    "cross-env": "^7.0.2",
     "eslint": "6.8.0",
     "eslint-config-prettier": "6.10.1",
     "eslint-plugin-jest": "23.8.2",
@@ -96,7 +99,8 @@
     "rollup": "2.3.3",
     "rollup-plugin-css-only": "2.0.0",
     "rollup-plugin-node-builtins": "2.1.2",
-    "rollup-plugin-size-snapshot": "0.11.0"
+    "rollup-plugin-size-snapshot": "0.11.0",
+    "rollup-plugin-terser": "^5.3.0"
   },
   "peerDependencies": {
     "react": "^16.0.0"
