--- a/package.json
+++ b/package.json
@@ -70,37 +70,37 @@
     "recompose": "^0.30.0"
   },
   "devDependencies": {
-    "@babel/core": "7.9.0",
-    "@babel/plugin-proposal-object-rest-spread": "7.9.0",
-    "@babel/preset-env": "7.9.0",
+    "@babel/core": "7.9.6",
+    "@babel/plugin-proposal-object-rest-spread": "7.9.6",
+    "@babel/preset-env": "7.9.6",
     "@babel/preset-react": "7.9.4",
-    "@rollup/plugin-buble": "0.21.1",
-    "@rollup/plugin-commonjs": "11.0.2",
-    "@rollup/plugin-node-resolve": "7.1.1",
-    "@rollup/plugin-replace": "^2.3.2",
-    "@testing-library/jest-dom": "5.3.0",
-    "@testing-library/react": "10.0.2",
+    "@rollup/plugin-buble": "0.21.3",
+    "@rollup/plugin-commonjs": "11.1.0",
+    "@rollup/plugin-node-resolve": "7.1.3",
+    "@rollup/plugin-replace": "2.3.2",
+    "@testing-library/jest-dom": "5.5.0",
+    "@testing-library/react": "10.0.4",
     "babel-eslint": "10.1.0",
     "bundlesize": "0.18.0",
     "codecov": "3.6.5",
-    "cross-env": "^7.0.2",
+    "cross-env": "7.0.2",
     "eslint": "6.8.0",
-    "eslint-config-prettier": "6.10.1",
+    "eslint-config-prettier": "6.11.0",
     "eslint-plugin-jest": "23.8.2",
-    "eslint-plugin-prettier": "3.1.2",
+    "eslint-plugin-prettier": "3.1.3",
     "eslint-plugin-react": "7.19.0",
-    "husky": "4.2.3",
-    "jest": "25.2.7",
-    "lint-staged": "10.1.2",
-    "prettier": "2.0.4",
+    "husky": "4.2.5",
+    "jest": "25.5.4",
+    "lint-staged": "10.2.2",
+    "prettier": "2.0.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "rimraf": "3.0.2",
-    "rollup": "2.3.3",
+    "rollup": "2.7.6",
     "rollup-plugin-css-only": "2.0.0",
     "rollup-plugin-node-builtins": "2.1.2",
     "rollup-plugin-size-snapshot": "0.11.0",
-    "rollup-plugin-terser": "^5.3.0"
+    "rollup-plugin-terser": "5.3.0"
   },
   "peerDependencies": {
     "react": "^16.0.0"
